<resources>
    <string name="app_name">Simple Messenger</string>
    
    <!--        LOGIN FRAGMENT      -->
    <string name="login_host_hint">Host</string>
    <string name="login_port_hint">Port</string>
    <string name="login_domain_hint">Domain</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_submit_button">Submit</string>
    <string name="login_choose_button">Choose</string>
    <string name="login_host_error">Please provide host</string>
    <string name="login_port_error">Please provide port</string>
    <string name="login_domain_error">Please provide domain</string>
    <string name="login_username_error">Please provide username</string>
    <string name="login_password_error">Please provide password</string>
    <string name="login_invalid_username_password">Invalid username or password</string>
    <string name="login_host_unknown">Invalid host</string>
    <string name="login_connection_failed">Connection failed</string>
    <string name="login_undefined_error">Encountered unexpected error. Please contact administrator</string>

</resources>
